Created more consistent endpoint names; regenerated NuGet
